# metagoofil

./: metagoofil.py  setup.cfg
