[metadata]
name = metagoofil
version = 1.0.0
author = opsdisk
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KptCheeseWhiz/metagoofil

[options]
py_modules = metagoofil
python_requires = >=3.0
install_requires = 
    google==3.0.0
    requests==2.31.0

[options.entry_points]
console_scripts =
    metagoofil = metagoofil:main
